2009-08-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support new compilation stage `E'.

	This stage transforms `.s' files to `.t.s' before passing them to
	the assembler. This is groundwork to add generic assembly
	optimizations valid across compilers, such as adding 'swch' on MT
	asembly.
	
	* tools/bin/cce.in: Set `slc_filter1' and `slc_filter2' instead of `slc_filter'. 

	* tools/bin/slc.in: Use them. Support new flag `-S1'.

	* tools/bin/slt.in: Support the new exit code. Document accordingly.
	
2009-08-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Rename thread symbols in SL->mtalpha compilation.

	This makes it more obvious when looking at the generated assembly
	where the mangled names come from.
	
	* tools/bin/spp,	
	* tools/lib/t-pppalpha/include/sl_support.h: Change the prefix of
	renamed thread functions to `__slf_' instead of `_x_'.

2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend test suite.

	* lib/tests/assert.c: New.

2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notices.
	
	* reheader.pl: Drop support for `sl_begin_header' and
	`sl_end_header'. Simplify.
	
	* Makefile.am: Adapt target `rehead', but avoid changing
	the (imported) source for `dlmalloc'.
	
	* lib/host-host-ptl/include/svp_os.h,
	* lib/host-host-seqc/include/svp_os.h,
	* lib/include/climits.h,
	* lib/include/cmalloc.h,
	* lib/include/cstdbool.h,
	* lib/include/cstddef.h,
	* lib/include/cstdint.h,
	* lib/include/sac_helpers.h,
	* lib/include/svp/argslot.h,
	* lib/include/svp/assert.h,
	* lib/include/svp/div.h,
	* lib/include/svp/io.h,
	* lib/include/svp/iomacros.h,
	* lib/include/svp/minimath.h,
	* lib/include/svp/perf.h,
	* lib/include/svp/roman.h,
	* lib/mtalpha-sim/include/svp_asmdiv.h,
	* lib/mtalpha-sim/include/svp_os.h,
	* lib/src/div.c,
	* lib/src/io.c,
	* lib/src/malloc_intrinsics.c,
	* lib/src/malloc_intrinsics.h,
	* lib/src/roman.c,
	* lib/src/strlib.c,
	* lib/tests/div/div.c,
	* lib/tests/div/div2.c,
	* lib/tests/div/div3.c,